# alon-trade

./: Makefile  pyproject.toml
alon-client/: README.md  pyproject.toml
alon-client/alon_client/: candles.py
alon-client/alon_client/arbitrage/: funding_rate.py
alon-client/alon_client/arbitrage/funding_rate/: arbitrage.py  config.py  exchange.py  main.py  strategies.py  utils.py
alon-client/alon_client/arbitrage/x_ex_fr/: arbitrage.py  balancer.py  config.py  funding_rate.py  logger.py  main.py  utils.py
alon-client/alon_client/mean_reversion/: bollinger_band.py
alon-client/example/: l1_orderbook.py  last_price.py
alon-client/typings/ccxt/: alpaca.pyi  binance.pyi  bingx.pyi  bit2c.pyi  bitfinex.pyi  bitflyer.pyi  bithumb.pyi  bitmex.pyi  bitrue.pyi  bitteam.pyi  cex.pyi  coinbaseadvanced.pyi  coinbaseexchange.pyi  coincheck.pyi  coinlist.pyi  cryptocom.pyi  defx.pyi  deribit.pyi  fmfwio.pyi  hashkey.pyi  htx.pyi  huobijp.pyi  independentreserve.pyi  krakenfutures.pyi  kucoin.pyi  lbank.pyi  lykke.pyi  mercado.pyi  ndax.pyi  oxfun.pyi  p2b.pyi  paymium.pyi  phemex.pyi  tradeogre.pyi  upbit.pyi  whitebit.pyi  woo.pyi  xt.pyi  yobit.pyi  zaif.pyi  (+1 more)
alon-client/typings/ccxt/abstract/: currencycom.pyi  idex.pyi  luno.pyi  mexc.pyi  okcoin.pyi  poloniex.pyi  vertex.pyi  wazirx.pyi
alon-client/typings/ccxt/async_support/: ascendex.pyi  bigone.pyi  binance.pyi  bitget.pyi  bitmart.pyi  bitpanda.pyi  bitstamp.pyi  bitteam.pyi  bl3p.pyi  blockchaincom.pyi  btcmarkets.pyi  bybit.pyi  coinbase.pyi  coinbaseadvanced.pyi  coinex.pyi  coinlist.pyi  cryptocom.pyi  currencycom.pyi  delta.pyi  gateio.pyi  gemini.pyi  hashkey.pyi  hitbtc.pyi  hollaex.pyi  huobi.pyi  indodax.pyi  (+15 more)
alon-client/typings/okx/: exceptions.pyi  okxclient.pyi  utils.pyi
(+734 files in other folders)
